<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diagnostic_analysis</name>
  <version>1.9.3</version>
  <description>The diagnostic_analysis package can convert a log of diagnostics data
    into a series of CSV files. Robot logs are recorded with rosbag, and
    can be processed offline using the scripts in this package.</description>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <maintainer email="karsten.knese@us.bosch.com">Karsten Knese</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/diagnostics_analysis</url>
<!-- <url type="bugtracker"></url> -->

  <author>Eric Berger</author>
  <author>Kevin Watts</author>

  <depend>diagnostic_msgs</depend>
  <depend>rosbag2_py</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
